# Terminal-Access-for-NVDA

./: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  build.py  buildVars.py  release.py
.github/workflows/: nightly.yml  release.yml
addon/: manifest.ini
addon/doc/en/: readme.html
addon/globalPlugins/: terminalAccess.py
addon/locale/ar/LC_MESSAGES/: nvda.po
addon/locale/cs/LC_MESSAGES/: nvda.po
addon/locale/de/LC_MESSAGES/: nvda.po
addon/locale/es/LC_MESSAGES/: nvda.po
addon/locale/fr/LC_MESSAGES/: nvda.po
addon/locale/hu/LC_MESSAGES/: nvda.po
addon/locale/it/LC_MESSAGES/: nvda.po
addon/locale/ja/LC_MESSAGES/: nvda.po
addon/locale/ko/LC_MESSAGES/: nvda.po
addon/locale/nl/LC_MESSAGES/: nvda.po
addon/locale/pl/LC_MESSAGES/: nvda.po
addon/locale/pt/LC_MESSAGES/: nvda.po
addon/locale/ru/LC_MESSAGES/: nvda.po
addon/locale/tr/LC_MESSAGES/: nvda.po
addon/locale/uk/LC_MESSAGES/: nvda.po
addon/locale/zh_CN/LC_MESSAGES/: nvda.po
addon/locale/zh_TW/LC_MESSAGES/: nvda.po
addon/native/: helper_process.py  termaccess_bridge.py
docs/developer/: ARCHITECTURE.md
docs/user/: ADVANCED_USER_GUIDE.md  TRANSLATION_GUIDE.md
native/: Cargo.toml
native/crates/termaccess-core/: Cargo.toml
native/crates/termaccess-core/src/: lib.rs  unicode_width.rs
native/crates/termaccess-ffi/src/: lib.rs
native/crates/termaccess-helper/: Cargo.toml
native/crates/termaccess-helper/src/: console_reader.rs  main.rs  protocol.rs  uia_events.rs
scripts/: translate.py
tests/: conftest.py  test_character_reading.py  test_gestures.py  test_helper_e2e.py  test_helper_process.py  test_native_bridge.py  test_new_output_announcer.py  test_url_extractor.py
