[workspace]
members = [
    "crates/termaccess-core",
    "crates/termaccess-ffi",
    "crates/termaccess-helper",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/PratikP1/Terminal-Access-for-NVDA"

[workspace.dependencies]
regex = "1"
lru = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
